# ilmoportaali-bank-parser

./: Cargo.toml  README.md
example_data/: bankdata.NDA  bankdata.PRN  ilmodata.json
src/: cli.rs  dom.rs  main.rs  nda.rs
