[package]
name = "ilmoportaali-bank-parser"
version = "0.1.0"
authors = ["Henri Lunnikivi <henri.lunnikivi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.40"
serde = { version = "1.0.101", features = ["derive"] }
clap = "2.33.0"
